Bug 1322666 - Change MAXWORDLEN to 100, matching the previous default from Hunspell 1.3. r=masayuki, a=gchang